--- a/games/f1racer/f1racer.html
+++ b/games/f1racer/f1racer.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Infinity Racer</title>
     <meta name="viewport" content="width=900, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../shared/style.css">
 </head>
 
 <body>
