--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Knight-Games</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="shared/style.css">
 </head>
 
 <body>
     <h1>Knight-Games</h1>
     <h2>Choose Your Quest</h2>
-    <div><a href="f1racer.html"><button style="font-size:1.3em;padding:16px 48px;margin:16px 0;">Infinity
+    <div><a href="games/f1racer/f1racer.html"><button style="font-size:1.3em;padding:16px 48px;margin:16px 0;">Infinity
                 Racer</button></a></div>
-    <div><a href="robotbrawler.html"><button style="font-size:1.3em;padding:16px 48px;margin:16px 0;">Robot
+    <div><a href="games/robotbrawler/robotbrawler.html"><button
+                style="font-size:1.3em;padding:16px 48px;margin:16px 0;">Robot
                 Brawler</button></a></div>
     <!-- Add more games here as needed -->
 </body>
