--- a/games/robotbrawler/robotbrawler.html
+++ b/games/robotbrawler/robotbrawler.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Robot Brawler</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../shared/style.css">
 </head>
 
 <body>
@@ -82,7 +82,7 @@
         <button id="play-again-btn">Play Again</button>
     </div>
 
-    <script src="mathQuestions.js"></script>
+    <script src="../../shared/mathQuestions.js"></script>
     <script src="robotbrawler.js"></script>
 </body>
 
